# monorepo

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  TODO.md  WORKSPACE.bzlmod  go.work  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uno.config.ts
.moon/: toolchain.yml  workspace.yml
.storybook/: main.js
apps/frontend/stitchmate-example-frontend/: .env.development  env.d.ts  package.json  tsconfig.json  vite.config.ts
apps/frontend/stitchmate-example-frontend/src/: index.d.ts  index.tsx
apps/frontend/stitchmate-example-frontend/src/user/: routes.tsx
apps/frontend/stitchmate-example-frontend/src/user/api/: keys.ts  queries.ts
apps/frontend/stitchmate-example-frontend/src/user/loaders/: singleUser.ts
apps/frontend/stitchmate-example-frontend/src/user/pages/: UserDetails.tsx
drug/apps/backend/user-command/: Cargo.toml
drug/apps/backend/user-query/: Cargo.toml
drug/apps/backend/user-query/src/: config.rs  main.rs
tolling/backend/apps/tolling-ingest/: BUILD.bazel  go.mod  go.sum  main.go
tools/: bazel_build_all_images.sh  bazel_stamp_vars.sh
tools/format/: BUILD.bazel
user/apps/backend/user-command/: config.yaml
user/apps/backend/user-command/src/: config.rs  main.rs
user/apps/backend/user-query/: config.yaml  moon.yml
util/: BUILD.bazel  Cargo.toml
