[package]
name = "user-command"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.35"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["valuable"] }
config = { version = "0.14.0", features = ["yaml"] }
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
valuable = { version = "0.1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-serde = { version = "0.1.3", features = ["valuable"] }
base = { path = "../../../../core/packages/backend/base"}
user-command = { path = "../../../packages/backend/command"}
user-common = { path = "../../../packages/backend/common"}